--- a/FirebaseApp/pubspec.yaml
+++ b/FirebaseApp/pubspec.yaml
@@ -24,6 +24,8 @@ environment:
 dependencies:
   cloud_firestore: ^0.14.4
   firebase_core: ^0.5.3
+  google_sign_in: ^4.5.6
+  firebase_auth: ^0.18.4+1
   get: ^3.24.0
   flutter:
     sdk: flutter
