--- a/FirebaseApp/pubspec.yaml
+++ b/FirebaseApp/pubspec.yaml
@@ -23,10 +23,14 @@ environment:
 
 dependencies:
   cloud_firestore: ^0.14.4
+  image_picker: ^0.6.7+17
   firebase_core: ^0.5.3
   google_sign_in: ^4.5.6
   firebase_auth: ^0.18.4+1
+  firebase_messaging: ^7.0.3
   get: ^3.24.0
+  http: ^0.12.2
+  firebase_storage: ^4.0.1
   flutter:
     sdk: flutter
 
